spacing fix

--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -29,6 +29,7 @@
 	
 .bigNumber{
 	font-size:3em;
+	margin-bottom:-10px;
 	}
 	
 .spacer{
